<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="2dp"
    android:layout_marginBottom="10dp">

    <Button
        android:id="@+id/inviteResponseMaybe"
        android:layout_width="58dp"
        android:layout_height="45dp"
        android:background="#4CAF50"
        android:text="@string/inviteResponseMaybe"
        tools:layout_editor_absoluteX="343dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/inviteResponseNo"
        android:layout_width="58dp"
        android:layout_height="45dp"
        android:background="#4CAF50"
        android:text="@string/inviteResponseNo"
        tools:layout_editor_absoluteX="265dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/externalAttendeeNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:text="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/externalAttendeeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:text="attendeeName"
        app:layout_constraintStart_toEndOf="@+id/externalAttendeeNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/inviteResponseYes"
        android:layout_width="58dp"
        android:layout_height="45dp"
        android:background="#4CAF50"
        android:text="@string/inviteResponseYes"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="0dp" />

</androidx.constraintlayout.widget.ConstraintLayout>